# Adham-AgriTech-Sentinel-v2.0

./: .editorconfig  .env.divine  .env.example  .env.local.backup-20251115-134008  .eslintrc.json  .gitattributes  .gitignore  .mcp.toml  .prettierignore  .prettierrc  .vercelignore  API_ENDPOINTS_AUDIT.md  API_KEYS_BACKUP.md  API_KEYS_GUIDE.md  API_KEYS_SETUP_GUIDE.md  API_TEST_REPORT.md  AUDIT_README.md  CHANGELOG.md  CODEX_COMMANDS.md  CODEX_INTEGRATION_GUIDE.md  CODEX_README.md  CODEX_SETUP_COMPLETE.md  CODEX_WORKFLOW_FINAL_STATUS.md  CODEX_WRITE_GUIDE.md  CODEX_WRITE_QUICKSTART.md  CODEX_WRITE_STATUS.md  CODEX_WRITE_SUMMARY.md  COMPLETE_IMPLEMENTATION_SUMMARY.md  COMPLETE_INTEGRATION_REPORT.md  COMPREHENSIVE_AUDIT_REPORT.md  COMPREHENSIVE_TEST_REPORT.md  CONTRIBUTING.md  CREATE_PULL_REQUEST.md  CRITICAL_ISSUES_REPORT.md  CRITICAL_PROJECT_ANALYSIS_2025.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_COMPLETE.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_READY.md  DEPLOYMENT_STATUS.md  (+140 more)
.agent/: rules.md
.github/: CODE_OF_CONDUCT.md  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  SECURITY.md  dependabot.yml
.sii/: ide-port.json
adham-agritech-v2/: .env.local.example  next.config.ts  package-lock.json  package.json  tailwind.config.js
adham-agritech-v2-backup-20251126/: package-lock.json  package.json  tailwind.config.js
backend/: requirements.txt  setup_cron.sh
config/: firebase-admin-config.json
docs/: CODEX_INTEGRATION_REPORT.md  CODEX_WRITE_COMPARISON.md  DEMO_ACCOUNT.md  ENVIRONMENT_VARIABLES.md  FEATURE_FLAGS.md  NDVI_INGESTION.md  PARTNER_BRAND_COMPLIANCE.md  SUPABASE_SETUP.md  THIRD_PARTY_ASSETS.md  Tasks_API.md  billing_prompt_and_schema.md  pricing.md  (+1 more)
services/crop-disease-diagnosis/: .dockerignore  .env.example  Dockerfile  Makefile  README.md  main.py  pyproject.toml  requirements.txt
services/crop-disease-diagnosis/tests/: test_main.py
(+598 files in other folders)
